--- a/miniprogram/jcclub/project.config.json
+++ b/miniprogram/jcclub/project.config.json
@@ -37,12 +37,34 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "personal",
 					"pathName": "pages/personal/personal",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 1,
+					"name": "personalInfo",
+					"pathName": "pages/personalInfo/personalInfo",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "team",
+					"pathName": "pages/team/team",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "out",
+					"pathName": "pages/out/out",
+					"query": "",
 					"scene": null
 				}
 			]
