完成团队库的发布和列表

--- a/api/jcclub/webapps/WEB-INF/config/dbconfig.properties
+++ b/api/jcclub/webapps/WEB-INF/config/dbconfig.properties
@@ -1,4 +1,4 @@
 driverclass=com.mysql.jdbc.Driver
-url=jdbc:mysql://www.hiyzx.cn:3306/jcclub?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://www.hiyzx.cn:3306/jcclub?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 username=root
 password=yzx362311
