--- a/miniprogram/jcclub/app.json
+++ b/miniprogram/jcclub/app.json
@@ -2,6 +2,7 @@
   "pages":[
     "pages/index/index",
     "pages/team/team",
+    "pages/teamInfo/teamInfo",
     "pages/talent/talent",
     "pages/personal/personal",
     "pages/personalInfo/personalInfo",
