--- a/miniprogram/jcclub/project.config.json
+++ b/miniprogram/jcclub/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -65,6 +65,19 @@
 					"name": "out",
 					"pathName": "pages/out/out",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "talent",
+					"pathName": "pages/talent/talent",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "teamInfo",
+					"pathName": "pages/teamInfo/teamInfo",
 					"scene": null
 				}
 			]
