添加我的投递和他人投递我的页面

--- a/miniprogram/jcclub/app.json
+++ b/miniprogram/jcclub/app.json
@@ -6,6 +6,8 @@
     "pages/talent/talent",
     "pages/personal/personal",
     "pages/personalInfo/personalInfo",
+    "pages/myDeliveryList/myDeliveryList",
+    "pages/otherDelivery/otherDelivery",
     "pages/out/out"
   ],
   "window":{
