添加我的团队页面和接口

--- a/miniprogram/jcclub/app.json
+++ b/miniprogram/jcclub/app.json
@@ -6,6 +6,7 @@
     "pages/talent/talent",
     "pages/personal/personal",
     "pages/personalInfo/personalInfo",
+    "pages/myTeam/myTeam",
     "pages/myDeliveryList/myDeliveryList",
     "pages/otherDelivery/otherDelivery",
     "pages/out/out"
