--- a/miniprogram/jcclub/app.json
+++ b/miniprogram/jcclub/app.json
@@ -9,6 +9,7 @@
     "pages/myTeam/myTeam",
     "pages/myDeliveryList/myDeliveryList",
     "pages/otherDelivery/otherDelivery",
+    "pages/select/select",
     "pages/out/out"
   ],
   "window":{
