--- a/miniprogram/jcclub/app.json
+++ b/miniprogram/jcclub/app.json
@@ -5,11 +5,13 @@
     "pages/teamInfo/teamInfo",
     "pages/talent/talent",
     "pages/personal/personal",
+    "pages/postInfo/postInfo",
     "pages/personalInfo/personalInfo",
     "pages/myTeam/myTeam",
     "pages/myDeliveryList/myDeliveryList",
     "pages/otherDelivery/otherDelivery",
     "pages/select/select",
+    "pages/approval/approval",
     "pages/out/out"
   ],
   "window":{
