添加一个输入框

--- a/miniprogram/jcclub/pages/approval/approval.json
+++ b/miniprogram/jcclub/pages/approval/approval.json
@@ -1,6 +1,8 @@
 {
   "usingComponents": {
+    "i-input": "../../iview/input/index",
     "i-card": "../../iview/card/index",
-    "i-button": "../../iview/button/index"
+    "i-button": "../../iview/button/index",
+    "i-modal": "../../iview/modal/index"
   }
 }
